--- a/.github/workflows/docker-scan.yml
+++ b/.github/workflows/docker-scan.yml
@@ -1,4 +1,4 @@
-name: Docker Scan Lab
+name: Docker Scan Lab (Trivy)
 
 on:
   push:
@@ -8,35 +8,47 @@ on:
 jobs:
   docker-scan:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
         run: docker build -t my-pedagogical-image .
 
-      - name: Scan Docker image with Snyk
-        uses: snyk/actions/docker@master
-        id: snyk-scan
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          image: my-pedagogical-image
-          json: true
-          args: --severity-threshold=high
-
-      - name: Save scan reports
+      # Installer Trivy (scanner d'images, pas besoin de token)
+      - name: Install Trivy
         run: |
-          echo "${{ steps.snyk-scan.outputs.json }}" > scan-report.json
-          echo "${{ steps.snyk-scan.outputs.text }}" > scan-report.txt
+          sudo apt-get update
+          sudo apt-get install -y wget
+          wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.55.0_Linux-64bit.deb -O trivy.deb
+          sudo dpkg -i trivy.deb
 
-      - name: Print summary
+      # Scan JSON + TXT, mais n'échoue jamais (pipeline reste vert)
+      - name: Scan image with Trivy (generate JSON & TXT)
         run: |
-          if grep -q '"severity":"critical"' scan-report.json; then
+          # Rapport JSON
+          trivy image --format json --output scan-report.json my-pedagogical-image || true
+          # Rapport texte lisible
+          trivy image --format table --output scan-report.txt my-pedagogical-image || true
+
+      # Résumé pédagogique dans les logs
+      - name: Print summary (No vulnerability detected / Vulnerability detected)
+        run: |
+          if grep -q '"Severity":"CRITICAL"' scan-report.json; then
             echo "Vulnerability detected"
           else
             echo "No vulnerability detected"
           fi
+
+      # (Optionnel) Uploader les rapports comme artefacts du job
+      - name: Upload reports as artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-scan-reports
+          path: |
+            scan-report.json
+            scan-report.txt
