--- a/.github/workflows/docker-scan.yml
+++ b/.github/workflows/docker-scan.yml
@@ -1,4 +1,4 @@
-name: Docker Scan Lab (Trivy)
+name: Docker Image Scan with Trivy
 
 on:
   push:
@@ -6,46 +6,58 @@ on:
   pull_request:
 
 jobs:
-  docker-scan:
+  trivy-scan:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # 1) Récupération du code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2) Setup Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # 3) Build de l'image Docker vulnérable
       - name: Build Docker image
-        run: docker build -t my-pedagogical-image .
+        run: |
+          docker build -t my-vulnerable-image .
 
-      # Installer Trivy (scanner d'images, pas besoin de token)
+      # 4) Installation de Trivy (open source, pas de token)
       - name: Install Trivy
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget
-          wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.55.0_Linux-64bit.deb -O trivy.deb
-          sudo dpkg -i trivy.deb
+          sudo apt-get install -y curl
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh \
+            | sudo sh -s -- -b /usr/local/bin
 
-      # Scan JSON + TXT, mais n'échoue jamais (pipeline reste vert)
-      - name: Scan image with Trivy (generate JSON & TXT)
+      # 5) Scan Trivy : génération des rapports JSON + TXT
+      #    || true permet de ne jamais casser le job (pipeline toujours vert)
+      - name: Scan image with Trivy (JSON & TXT)
         run: |
-          # Rapport JSON
-          trivy image --format json --output scan-report.json my-pedagogical-image || true
-          # Rapport texte lisible
-          trivy image --format table --output scan-report.txt my-pedagogical-image || true
+          echo "Running Trivy scan (JSON)..."
+          trivy image --severity CRITICAL,HIGH --format json \
+            --output scan-report.json my-vulnerable-image || true
 
-      # Résumé pédagogique dans les logs
-      - name: Print summary (No vulnerability detected / Vulnerability detected)
+          echo "Running Trivy scan (TABLE/TXT)..."
+          trivy image --severity CRITICAL,HIGH --format table \
+            --output scan-report.txt my-vulnerable-image || true
+
+      # 6) Résumé pédagogique : CRITICAL ou pas ?
+      - name: Print summary (Vulnerability detected / No vulnerability detected)
         run: |
           if grep -q '"Severity":"CRITICAL"' scan-report.json; then
-            echo "Vulnerability detected"
+            echo "======================================="
+            echo "👉 Vulnerability detected (CRITICAL) 👈"
+            echo "======================================="
           else
-            echo "No vulnerability detected"
+            echo "======================================="
+            echo "✅ No vulnerability detected (CRITICAL)"
+            echo "======================================="
           fi
 
-      # (Optionnel) Uploader les rapports comme artefacts du job
-      - name: Upload reports as artifacts
+      # 7) (Optionnel mais très pédagogique) : uploader les rapports
+      - name: Upload scan reports as artifact
         uses: actions/upload-artifact@v4
         with:
           name: trivy-scan-reports
