--- a/.github/workflows/docker-scan.yml
+++ b/.github/workflows/docker-scan.yml
@@ -10,20 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1) Récupération du code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2) Setup Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 3) Build de l'image Docker vulnérable
-      - name: Build Docker image
+      - name: Build vulnerable Docker image
         run: |
-          docker build -t my-vulnerable-image .
+          docker build -t ultra-vulnerable-image .
 
-      # 4) Installation de Trivy (open source, pas de token)
       - name: Install Trivy
         run: |
           sudo apt-get update
@@ -31,19 +27,16 @@ jobs:
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh \
             | sudo sh -s -- -b /usr/local/bin
 
-      # 5) Scan Trivy : génération des rapports JSON + TXT
-      #    || true permet de ne jamais casser le job (pipeline toujours vert)
       - name: Scan image with Trivy (JSON & TXT)
         run: |
           echo "Running Trivy scan (JSON)..."
           trivy image --severity CRITICAL,HIGH --format json \
-            --output scan-report.json my-vulnerable-image || true
+            --output scan-report.json ultra-vulnerable-image || true
 
           echo "Running Trivy scan (TABLE/TXT)..."
           trivy image --severity CRITICAL,HIGH --format table \
-            --output scan-report.txt my-vulnerable-image || true
+            --output scan-report.txt ultra-vulnerable-image || true
 
-      # 6) Résumé pédagogique : CRITICAL ou pas ?
       - name: Print summary (Vulnerability detected / No vulnerability detected)
         run: |
           if grep -q '"Severity":"CRITICAL"' scan-report.json; then
@@ -56,7 +49,6 @@ jobs:
             echo "======================================="
           fi
 
-      # 7) (Optionnel mais très pédagogique) : uploader les rapports
       - name: Upload scan reports as artifact
         uses: actions/upload-artifact@v4
         with:
